--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <body>
 <h1 style="font-size:10em" data-text="📷">📷 📝</h1>
 </body>
-</html><h1 style="font-size:10em" data-text="📷">📷 📝</h1>
+</html>
