--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-<head>Notes</head>
-<body>
-<h1 style="font-size:10em" data-text="📷">📷 📝</h1>
-</body>
+  <head>
+    <title>
+      Notes
+    </title>
+  </head>
+  <body>
+    <h1 style="font-size:10em" data-text="notes">📷 📝</h1>
+  </body>
 </html>
